logos embedded everywhere

--- a/app/templates/mainpage/main.html
+++ b/app/templates/mainpage/main.html
@@ -15,8 +15,9 @@ Stock Score
             <div class="analytics__row row">
                 <div class="analytics__col analytics__col_left">
 <!--                    <h1 class="analytics__title">Analytics driven automated trading</h1>-->
+                    <img class="" src="{{ url_for('static', filename='images/Stock_score_logos/Logo_name_info_square.png') }}">
 
-                    <h1 class="analytics__title">Stock Anlytics</h1><h1 class="analytics__title">and</h1><h1 class="analytics__title"> Market Emotions</h1>
+<!--                    <h1 class="analytics__title">Stock Anlytics</h1><h1 class="analytics__title">and</h1><h1 class="analytics__title"> Market Emotions</h1>-->
                 </div>
                 <div class="analytics__col analytics__col_right">
                     <div class="analytics__items">
