--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -52,6 +52,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/styles.css') }}">
 
       <!--    Stylesheets from old site-->
+    <link href="https://cdn.jsdelivr.net/gh/StephanWagner/jBox@v1.3.2/dist/jBox.all.min.css" rel="stylesheet">
 
     <script>
       var isRTL = JSON.parse(localStorage.getItem('isRTL'));
@@ -104,7 +105,7 @@
               </button>
             </div>
             <a class="navbar-brand d-none d-xl-block" href="/">
-              <div class="d-flex align-items-center py-1">
+              <div class="d-flex align-items-center py-1 ps-4">
                 <img style="margin-left:-25px;width: 170px;"  class="me-2 mt-1" src="../../static/images/Stock_score_logos/Logo_name.png" alt=""  />
               </div>
             </a>
@@ -375,8 +376,9 @@
     <script src="{{ url_for('static', filename='falcon/assets/js/theme.js') }}"></script>
 
     <!--    JavaScripts from old site-->
-<!--    <script src="https://cdn.jsdelivr.net/gh/StephanWagner/jBox@v1.3.2/dist/jBox.all.min.js"></script>-->
+    <script src="https://cdn.jsdelivr.net/gh/StephanWagner/jBox@v1.3.2/dist/jBox.all.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/base_new.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/jb-tooltip.js') }}"></script>
 <!--    <script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/jb-tooltip.js') }}"></script>-->
 
 
