--- a/app/templates/partial/ticker_info_fundamentals_feed.html
+++ b/app/templates/partial/ticker_info_fundamentals_feed.html
@@ -1,22 +1,25 @@
 {% for d in data %}
 <div class="col-md-4">
-    <div style="border: 3px solid rgba(26,54,126,0.125);" class="m-1">
-        <div class="card-header" style="justify-content: space-between; background: rgb(210 214 226 / 13%);">
+    <div class="m-1 border border-3">
+        <div class="card-header d-flex justify-content-between" style="background: rgb(210 214 226 / 13%);">
             <div style="font-size: smaller;">{{d['date']}}</div>
             <div>{{d['calendarYear']}} - {{d['period']}}</div>
         </div>
-        <div class="div-content pt-2">
-            <div style="font-size: small; display: flex; justify-content: space-between; padding-top: 0.5%; border-bottom: 1px solid rgba(26,54,126,0.125);">
-                <div class="col-md-7" style="padding-left: 2.35rem;">
+        <div class="div-content pt-2 fs--1">
+            <div>
+                <div class="">
                     Revenue
                 </div>
-                <div class="col-md-5" style="text-align: right;">
+                <div class="" >
                     {{d['revenue']}}
                 </div>
             </div>
-            <div style="font-size: small; display: flex; justify-content: space-between; padding-top: 0.5%; border-bottom: 1px solid rgba(26,54,126,0.125);">
-                <div class="col-md-7">
-                    <i data-tooltip-id="55" class="fas fa-info-circle info-icon pr-1 jb-tooltip-info jb-info-55"></i> NET Income
+            <div>
+                <div class="">
+                    <span data-tooltip-id="55" class="info-icon pr-1 jb-tooltip-info jb-info-55">
+                        <i class="fas fa-info-circle"></i>
+                    </span>
+                    NET Income
                 </div>
                 <div class="col-md-5" style="text-align: right;">
                     {{d['netIncome']}}
@@ -24,7 +27,9 @@
             </div>
             <div style="font-size: small; display: flex; justify-content: space-between; padding-top: 0.5%; border-bottom: 1px solid rgba(26,54,126,0.125);">
                 <div class="col-md-7">
-                    <i data-tooltip-id="3" class="fas fa-info-circle info-icon pr-1 jb-tooltip-info jb-info-3"></i> EPS
+                    <span data-tooltip-id="3" class="info-icon pr-1 jb-tooltip-info jb-info-3">
+                        <i class="fas fa-info-circle"></i>
+                    </span>
                 </div>
                 <div class="col-md-5" style="text-align: right;">
                     {{d['eps']|round(2)}}
@@ -32,7 +37,9 @@
             </div>
             <div style="font-size: small; display: flex; justify-content: space-between; padding-top: 0.5%; border-bottom: 1px solid rgba(26,54,126,0.125);">
                 <div class="col-md-7">
-                    <i data-tooltip-id="2" class="fas fa-info-circle info-icon pr-1 jb-tooltip-info jb-info-2"></i> EBITDA ratio
+                    <span data-tooltip-id="2" class="info-icon pr-1 jb-tooltip-info jb-info-2">
+                        <i class="fas fa-info-circle"></i>
+                    </span>
                 </div>
                 <div class="col-md-5" style="text-align: right;">
                     {{d['ebitdaratio']|round(2)}}
@@ -40,7 +47,9 @@
             </div>
             <div style="font-size: small; display: flex; justify-content: space-between; padding-top: 0.5%; border-bottom: 1px solid rgba(26,54,126,0.125);">
                 <div class="col-md-7">
-                    <i data-tooltip-id="54" class="fas fa-info-circle info-icon pr-1 jb-tooltip-info jb-info-54"></i> Gross Profit ratio
+                    <span data-tooltip-id="54" class="info-icon pr-1 jb-tooltip-info jb-info-54">
+                        <i class="fas fa-info-circle"></i>
+                    </span>
                 </div>
                 <div class="col-md-5" style="text-align: right;">
                     {{d['grossProfitRatio']|round(2)}}
